make simulate.lm
to try and get simulate.mlm working have overwritten simulate and simulate.lm from stats (!?)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,mlm)
 S3method(predict,mlm)
 S3method(residuals,mlm)
-S3method(simulate,mlm)
+S3method(simulate,lm)
 export(gamenvelope)
 export(qqenvelope)
+export(simulate)
