drop link to mvabund help file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(qqenvelope)
 importFrom(grDevices,adjustcolor)
 importFrom(graphics,lines)
 importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(graphics,polygon)
 importFrom(stats,cor)
 importFrom(stats,fitted)
