--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom(grDevices,adjustcolor)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
+importFrom(graphics,points)
 importFrom(graphics,polygon)
 importFrom(stats,cor)
 importFrom(stats,fitted)
@@ -26,6 +27,7 @@ importFrom(stats,residuals.lm)
 importFrom(stats,rnorm)
 importFrom(stats,rstandard)
 importFrom(stats,runif)
+importFrom(stats,sd)
 importFrom(stats,simulate)
 importFrom(stats,update)
 importFrom(stats,var)
