--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(stats,cor)
 importFrom(stats,fitted)
 importFrom(stats,formula)
 importFrom(stats,lm)
+importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
