--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: ecostats
 Title: Code and Data Accompanying the Eco-Stats Text
-Version: 0.2.1
+Version: 0.2.2
 Authors@R: c(person("David", "Warton", email = "david.warton@unsw.edu.au", role = c("aut", "cre")),
-            person("Christopher", "Chung", role = "ctb")
+            person("Christopher", "Chung", role = "ctb"),
+            person("Eve", "Slavich", role = "ctb")
             )
 Description: Functions and data supporting the Eco-Stats text (Warton, forthcoming, Springer), and solutions to exercises. Functions include tools for using simulation envelopes in diagnostic plots, and a function for diagnostic plots of multivariate linear models. Datasets mentioned in the package are included here (where not available elsewhere) and vignette solutions to textbook exercises will be forthcoming at a later time.
 License: LGPL (>= 2.1)
@@ -15,8 +16,9 @@ Suggests:
     rmarkdown,
     DAAG,
     MASS,
+    caper,
     car,
-    dplyr,
+    GGally,
     ggplot2,
     ggthemes,
     glmnet,
@@ -24,6 +26,12 @@ Suggests:
     leaps,
     lme4,
     multcomp,
+    mvabund,
+    nlme,
+    permute,
+    pgirmess,
+    phylobase,
+    phylosignal,
     reshape2,
     testthat
 VignetteBuilder: knitr
