fixing some pre-pub bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,19 +3,21 @@
 S3method(simulate,manyglm)
 S3method(simulate,mlm)
 export(BlockBootID)
+export(addSmooth)
 export(anovaPB)
 export(cpredict)
 export(cresiduals)
 export(plotenvelope)
 export(qqenvelope)
-importFrom(ecoCopula,cord)
+importFrom(MASS,rnegbin)
 importFrom(grDevices,adjustcolor)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(mvabund,manyglm)
+importFrom(mgcv,gam)
+importFrom(mgcv,predict.gam)
 importFrom(stats,anova)
 importFrom(stats,coef)
 importFrom(stats,cor)
