--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: ecostats
 Title: Code and Data Accompanying the Eco-Stats Text
-Version: 0.2.3
+Version: 0.2.4
 Authors@R: c(person("David", "Warton", email = "david.warton@unsw.edu.au", role = c("aut", "cre")),
             person("Christopher", "Chung", role = "ctb"),
             person("Eve", "Slavich", role = "ctb")
             )
 Description: Functions and data supporting the Eco-Stats text (Warton, forthcoming, Springer), and solutions to exercises. Functions include tools for using simulation envelopes in diagnostic plots, and a function for diagnostic plots of multivariate linear models. Datasets mentioned in the package are included here (where not available elsewhere) and vignette solutions to textbook exercises will be forthcoming at a later time.
 License: LGPL (>= 2.1)
-Imports: GET, mgcv, mvtnorm
+Imports: GET, MASS, mgcv, mvtnorm
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
@@ -16,7 +16,6 @@ Suggests:
     rmarkdown,
     DAAG,
     dplyr,
-    MASS,
     caper,
     car,
     GGally,
@@ -33,6 +32,8 @@ Suggests:
     pgirmess,
     phylobase,
     phylosignal,
+    psych,
     reshape2,
+    smatr,
     testthat
 VignetteBuilder: knitr
