--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,23 +16,28 @@ importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
 importFrom(graphics,polygon)
-importFrom(mgcv,gam)
-importFrom(mgcv,predict.gam)
+importFrom(stats,Gamma)
 importFrom(stats,anova)
+importFrom(stats,binomial)
 importFrom(stats,coef)
 importFrom(stats,cor)
 importFrom(stats,fitted)
 importFrom(stats,formula)
+importFrom(stats,gaussian)
+importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,logLik)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
+importFrom(stats,model.offset)
 importFrom(stats,model.response)
+importFrom(stats,poisson)
 importFrom(stats,predict)
 importFrom(stats,printCoefmat)
 importFrom(stats,qnorm)
 importFrom(stats,qqnorm)
 importFrom(stats,quantile)
+importFrom(stats,reformulate)
 importFrom(stats,residuals)
 importFrom(stats,residuals.lm)
 importFrom(stats,rnorm)
