--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,41 +9,9 @@ export(cpredict)
 export(cresiduals)
 export(plotenvelope)
 export(qqenvelope)
+import(ecoCopula)
+import(graphics)
+import(mvabund)
+import(stats)
 importFrom(MASS,rnegbin)
 importFrom(grDevices,adjustcolor)
-importFrom(graphics,lines)
-importFrom(graphics,par)
-importFrom(graphics,plot)
-importFrom(graphics,points)
-importFrom(graphics,polygon)
-importFrom(stats,Gamma)
-importFrom(stats,anova)
-importFrom(stats,binomial)
-importFrom(stats,coef)
-importFrom(stats,cor)
-importFrom(stats,fitted)
-importFrom(stats,formula)
-importFrom(stats,gaussian)
-importFrom(stats,glm)
-importFrom(stats,lm)
-importFrom(stats,logLik)
-importFrom(stats,model.frame)
-importFrom(stats,model.matrix)
-importFrom(stats,model.offset)
-importFrom(stats,model.response)
-importFrom(stats,poisson)
-importFrom(stats,predict)
-importFrom(stats,printCoefmat)
-importFrom(stats,qnorm)
-importFrom(stats,qqnorm)
-importFrom(stats,quantile)
-importFrom(stats,reformulate)
-importFrom(stats,residuals)
-importFrom(stats,residuals.lm)
-importFrom(stats,rnorm)
-importFrom(stats,rstandard)
-importFrom(stats,runif)
-importFrom(stats,sd)
-importFrom(stats,simulate)
-importFrom(stats,update)
-importFrom(stats,var)
