--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: ecostats
-Title: Code and Data Accompanying the Eco-Stats Text
-Version: 1.1.2
-Date: 2022-05-09
+Title: Code and Data Accompanying the Eco-Stats Text (Warton 2022)
+Version: 1.1.5
+Date: 2022-05-25
 Authors@R: c(person("David", "Warton", email = "david.warton@unsw.edu.au", role = c("aut", "cre")),
             person("Christopher", "Chung", role = "ctb"),
             person("Mark", "Donoghoe", role = "ctb"),
             person("Eve", "Slavich", role = "ctb")
             )
-Description: Functions and data supporting the Eco-Stats text (Warton, 2022, Springer), and solutions to exercises. Functions include tools for using simulation envelopes in diagnostic plots, and a function for diagnostic plots of multivariate linear models. Datasets mentioned in the package are included here (where not available elsewhere) and vignette solutions to textbook exercises will be forthcoming at a later time.
+Description: Functions and data supporting the Eco-Stats text (Warton, 2022, Springer), and solutions to exercises. Functions include tools for using simulation envelopes in diagnostic plots, and a function for diagnostic plots of multivariate linear models. Datasets mentioned in the package are included here (where not available elsewhere) and there is a vignette for each chapter of the text with solutions to exercises.
 License: LGPL (>= 2.1)
 Imports: ecoCopula, GET, graphics, grDevices, MASS, mgcv, mvtnorm, stats
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Depends: R (>= 3.5.0), mvabund (>= 4.2)
 Suggests: 
     knitr,
@@ -22,9 +22,9 @@ Suggests:
     car,
     corrplot,
     DAAG,
-    devtools,
     DHARMa,
     dplyr,
+    ecomix,
     gclus,
     GGally,
     ggplot2,
