--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ecostats
 Title: Code and Data Accompanying the Eco-Stats Text (Warton 2022)
-Version: 1.1.6
-Date: 2022-05-26
+Version: 1.1.7
+Date: 2022-05-27
 Authors@R: c(person("David", "Warton", email = "david.warton@unsw.edu.au", role = c("aut", "cre")),
             person("Christopher", "Chung", role = "ctb"),
             person("Mark", "Donoghoe", role = "ctb"),
@@ -51,4 +51,5 @@ Suggests:
     testthat,
     vegan,
     VGAM
+Additional_repositories: https://github.com/skiptoniam/
 VignetteBuilder: knitr
