--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ecostats
 Title: Code and Data Accompanying the Eco-Stats Text (Warton 2022)
-Version: 1.1.7
+Version: 1.1.8
 Date: 2022-05-27
 Authors@R: c(person("David", "Warton", email = "david.warton@unsw.edu.au", role = c("aut", "cre")),
             person("Christopher", "Chung", role = "ctb"),
@@ -51,5 +51,5 @@ Suggests:
     testthat,
     vegan,
     VGAM
-Additional_repositories: https://github.com/skiptoniam/
+Additional_repositories: https://github.com/dwarton/drat
 VignetteBuilder: knitr
